--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>Tidan Realms</title>	
-<link rel="icon" href="Tidan.png"; />
+<link rel="icon" href="Tidan.PNG"; />
 <body bgcolor="#000000">
 <center>
 <embed src="Tidan-Client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
