--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="Tidan.PNG"; />
 <body bgcolor="#000000">
 <center>
-<embed src="Tidan-Client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
+<embed src="client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
 </body>
 </html>
