--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="icon" href="Yeet_DR.png"; />
 <body bgcolor="#000000">
 <center>
+ <font color="red"></font>
 <embed src="client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
  <DIV style="position: absolute; top:140px; left:400px; width:200px; height:25px">Thanks for playing daedeloth rotmg!</DIV>
 </center>
