--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <link rel="icon" href="Yeet_DR.png"; />
 <body bgcolor="#000000">
 <center>
- <font color="red"></font>
 <embed src="client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
- <DIV style="position: absolute; top:140px; left:400px; width:200px; height:25px">Thanks for playing daedeloth rotmg!</DIV>
+ <DIV style="position: absolute; top:660px; left:400px; width:200px; height:25px; color:white">Thanks for playing daedeloth rotmg!</DIV>
 </center>
 </body>
 </html>
