--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body bgcolor="#000000">
 <center>
 <embed src="client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
- <DIV style="position: absolute; top:660px; left:350px; width:300px; height:50px; color:white">Thanks for playing daedeloth rotmg!</DIV>
- <IMG STYLE="position:absolute; TOP:720px; LEFT:430px; WIDTH:100px; HEIGHT:100px" SRC="Yeet_DR.png">
+ <DIV style="position: sticky; top:660px; left:350px; width:300px; height:50px; color:white">Thanks for playing daedeloth rotmg!</DIV>
+ <IMG STYLE="position: sticky; TOP:720px; LEFT:430px; WIDTH:100px; HEIGHT:100px" SRC="Yeet_DR.png">
 </center>
 </body>
 </html>
