--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <link rel="icon" href="Yeet_DR.png"; />
 <body bgcolor="#000000">
 <center>
-<embed src="client.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
- <DIV style="position: sticky; top:660px; left:350px; width:300px; height:50px; color:white">Thanks for playing daedeloth rotmg!</DIV>
- <IMG STYLE="position: sticky; TOP:720px; LEFT:430px; WIDTH:100px; HEIGHT:100px" SRC="Yeet_DR.png">
+<embed src="ElevationRealms.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
 </body>
 </html>
