--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Daedeloth Rotmg</title>	
-<link rel="icon" href="Yeet_DR.png"; />
+<title>Elevation Realms</title>	
+<link rel="icon" href=""; />
 <body bgcolor="#000000">
 <center>
 <embed src="ElevationRealms.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
