--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Elevation Realms</title>	
+<title>Vortex Realms</title>	
 <link rel="icon" href=""; />
 <body bgcolor="#000000">
 <center>
-<embed src="ElevationRealms.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
+<embed src="Vortex_Realms.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
 </body>
 </html>
