--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Tidan Realms</title>	
+<title>Wolf Realms Reborn</title>	
 <link rel="icon" href=""; />
 <body bgcolor="#000000">
 <center>
