--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>UT Reborn</title>	
 <link rel="icon" href=""; />
-<body background="bgimage.jpg">
+<body background="bgimg.png">
 <center>
 <embed src="UTReborn.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
