--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <center>
 <embed src="UTReborn.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
+<center>  
+  <font size="+2">Thanks for playing UT Reborn! Copy + paste this for Flash Clients: https://dangergun.github.io/UTReborn.swf</font>
+ </center>  
 </body>
 </html>
