--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <link rel="icon" href=""; />
 <body background="bgimg.png">
 <center>
-<embed src="UTReborn2.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
+<embed src="UTReborn.swf" pluginspage="http://www.macromedia.com/go/getfashplayer" type="application/x-shockwave-flash" width="800" height="600">
 </center>
 <center>  
-  <font size="+2" color="white">Thanks for playing UT Reborn! Copy + paste this for Flash Clients: https://dangergun.github.io/UTReborn.swf</font>
+  <font size="+2" color="white">Thanks for playing UT Reborn! Copy + paste this for Flash Clients: https://UTRealmsReborn.github.io/UTReborn.swf</font>
  </center>  
 </body>
 </html>
