--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					"style", "outline:none"
 			);
 		} else {  // flash is too old or we can't detect the plugin
-			var alternateContent = '<div class="getFlash"><img src="realmlogo.png" alt="Realm of the Mad God Logo" style="margin-top: -50px; padding: 15px;" /><h2>Playing Realm of the Mad God requires Flash!</h2> <h3><a href="https://www.adobe.com/go/getflash/">Get Flash or click here to activate.</a></h3></div>';
+			var alternateContent = '<div class="getFlash"><img src="realmlogo.png" alt="Realm of the Mad God Logo" style="margin-top: -50px; padding: 15px;" /><h2>Playing UT Realms requires Flash!</h2> <h3><a href="https://www.adobe.com/go/getflash/">Get Flash or click here to activate.</a></h3></div>';
 			document.write(alternateContent);  // insert non-flash content
 		}
 		// -->
