--- a/index.html
+++ b/index.html
@@ -279,11 +279,8 @@
 		</ul>
 	</div>	
 	<div class="media">
-		<a href="https://www.facebook.com/rotmg/" target="_blank"><img class="social" src="https://decagames.com/assets/email/facebook.png" alt="Facebook" /></a>
+		<a href="https://www.facebook.com/rotmg/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki" /></a>
 		<a href="https://www.reddit.com/r/RotMG/" target="_blank"><img class="social" src="https://decagames.com/assets/email/reddit.png" alt="Reddit" /></a>
-		<a href="https://twitter.com/RotMG_news" target="_blank"><img class="social" src="https://decagames.com/assets/email/twitter.png" alt="Twitter" /></a>
-		<a href="https://discord.gg/rotmg" target="_blank"><img class="social" src="https://decagames.com/assets/email/discord.png" alt="Discord" /></a>
-		<a href="https://www.realmeye.com" target="_blank"><img class="social" src="https://decagames.com/assets/email/eye.png" alt="Realm Eye" /></a>
 	</div>
 <center>
 	<div id="gameplay" class="show">
