--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 		</ul>
 	</div>	
 	<div class="media">
-		<a href="https://www.facebook.com/rotmg/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki" /></a>
-		<a href="https://www.reddit.com/r/RotMG/" target="_blank"><img class="social" src="https://decagames.com/assets/email/reddit.png" alt="Reddit" /></a>
+		<a href="http://valorproject.wikidot.com/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki" /></a>
+		<a href="https://discord.gg/wfY3vXM" target="_blank"><img class="social" src="https://decagames.com/assets/email/discord.png" alt="Discord" /></a>
 	</div>
 <center>
 	<div id="gameplay" class="show">
