--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	</div>	
 	<div class="media">
 		<a href="http://valorproject.wikidot.com/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki" /></a>
-		<a href="https://discord.gg/wfY3vXM" target="_blank"><img class="social" src="https://decagames.com/assets/email/discord.png" alt="Discord" /></a>
+		<a href="https://discord.gg/wfY3vXM" target="_blank"><img class="social" src="images/discordicon.png" alt="Discord" /></a>
 	</div>
 <center>
 	<div id="gameplay" class="show">
