--- a/index.html
+++ b/index.html
@@ -345,15 +345,15 @@
 	</script>
 	<noscript>
 		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-				id="AGCLoader1561028013" width="640" height="640" class="game_swf"
+				id="UTReborn" width="640" height="640" class="game_swf"
 				codebase="https://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="AGCLoader1561028013.swf" />
+			<param name="movie" value="UTReborn.swf" />
 			<param name="quality" value="high" />
 			<param name="bgcolor" value="#000000" />
 			<param name="wmode" value="direct" />
 			<param name="allowScriptAccess" value="sameDomain" />
 			<embed src="UTReborn.swf" quality="high" bgcolor="#000000"
-				width="800" height="600" name="AGCLoader1561028013" align="middle"
+				width="800" height="600" name="UTReborn" align="middle"
 				   play="true"
 				   loop="false"
 				   quality="high"
