--- a/index.html
+++ b/index.html
@@ -227,11 +227,7 @@
 		#gameplay {
 			display: none;
 		}
-
-		#download {
-			display: none;
-		}
-
+		
 		.show {
 			display: block !important;
 		}
@@ -274,8 +270,7 @@
 <body>
 	<div class="navigation">
 		<ul>
-			<li><a id="playButton" class="active" href="#gameplay"><img src="images/playButton.png" /></a></li>
-			<li><a id="downloadButton" href="#download"><img src="images/downloadButton.png" /></a></li>
+			<li><a id="playButton" class="active" href="https://dangergun.github.io"><img src="images/playButton.png" /></a></li>
 		</ul>
 	</div>	
 	<div class="media">
@@ -366,19 +361,11 @@
 		<a class='close'><span class='close' style='position:absolute; top:0; right:0; cursor: pointer;'> X </span> </a>
 	</div>
 	</div>
-	<div id="download">
-		<div class="getClient">
-			<div class="content">
-				<h2>Get started on setting up the game on your PC!</h2>
-				<h3><a href="https://www.realmeye.com/wiki/using-the-adobe-flash-projector" target="_blank">Using the Adobe Flash Projector.</a></h3>
-			</div>
-			<div class="content">
-				<h2>Get the flashplayer link.</h2>
-				<a href="#"><span class="copy-link">https://www.dangergun.github.io/client </br>(Click to Copy)</span></a>
-			</div>
 		</div>
 	</div>
 	<p>Thanks for playing UT Realms! Check out the <a href="http://valorproject.wikidot.com/" target="_blank">Valor Wiki</a>
+	<br/>	
+	<p>get the flashplayer link here: <a href="#"><span class="copy-link">https://www.dangergun.github.io/client </br>(Click to Copy)</span></a>
 		<h4 style="margin-top: 0px; margin-bottom: 0px;">Copyright &copy; <script type="text/javascript">
 			var d = new Date()
 			document.write(d.getFullYear())
