--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 	<p>Thanks for playing UT Realms! Check out the <a href="http://valorproject.wikidot.com/" target="_blank">Valor Wiki</a>
 	<br/>	
 	<p>get the flashplayer link here: <a href="#"><span class="copy-link">https://www.dangergun.github.io/client (Click to Copy)</span></a>
-		<h4 style="margin-top: 0px; margin-bottom: 0px;">Copyright &copy; <script type="text/javascript">
+		<h4 style="margin-top: 0px; margin-bottom: 0px;">; <script type="text/javascript">
 			var d = new Date()
 			document.write(d.getFullYear())
 		<br/>
