--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 		</ul>
 	</div>	
 	<div class="media">
-		<a href="http://valorproject.wikidot.com/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki" /></a>
+		<a href="http://valorproject.wikidot.com/" target="_blank"><img class="social" src="images/valoricon.png" alt="Valor Wiki (Temporary)" /></a>
 		<a href="https://discord.gg/wfY3vXM" target="_blank"><img class="social" src="images/discordicon.png" alt="Discord" /></a>
 	</div>
 <center>
