--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 					"style", "outline:none"
 			);
 		} else {  // flash is too old or we can't detect the plugin
-			var alternateContent = '<div class="getFlash"><img src="UTLogo.png" alt="UT Realms Logo" style="margin-top: -50px; padding: 15px;" /><h2>Playing UT Realms requires Flash!</h2> <h3><a href="https://www.adobe.com/go/getflash/">Get Flash or click here to activate.</a></h3></div>';
+			var alternateContent = '<div class="getFlash"><img src="images/UTLogo.png" alt="UT Realms Logo" style="margin-top: -50px; padding: 15px;" /><h2>Playing UT Realms requires Flash!</h2> <h3><a href="https://www.adobe.com/go/getflash/">Get Flash or click here to activate.</a></h3></div>';
 			document.write(alternateContent);  // insert non-flash content
 		}
 		// -->
