--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 <title>UT Realms Reborn</title>
 </head>
-
+<p style="color:White">	
+<p style="font-size:50px">
+<body style="background-color:black;">
 <body>
-This client is outdated! Please join the discord below, and visit #info-how-to-play for an updated link!
+<p>This client is outdated! Please join the discord below, and visit #info-how-to-play for an updated link!</p>
 </body>
 	</Center>
 <br/>
