--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
 <title>UT Realms Reborn</title>
 </head>
-<p style="color:White">	
-<p style="font-size:50px">
 <body style="background-color:black;">
 <body>
-<p>This client is outdated! Please join the discord below, and visit #info-how-to-play for an updated link!</p>
+<font color="white" size="50">This client is outdated! Please join the discord below, and visit #info-how-to-play for an updated link!</font>
 </body>
 	</Center>
 <br/>
