--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <br/>
 <br/>
 <iframe src="https://discordapp.com/widget?id=536304421718458378&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-
+</Center>
 </html>
