changed webclient flash link

--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
 		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 				id="UTReborn" width="640" height="640" class="game_swf"
 				codebase="https://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="UTReborn.swf" />
+			<param name="movie" value="UTReborn.swf?build=release" />
 			<param name="quality" value="high" />
 			<param name="bgcolor" value="#000000" />
 			<param name="wmode" value="direct" />
 			<param name="allowScriptAccess" value="sameDomain" />
-			<embed src="UTReborn.swf" quality="high" bgcolor="#000000"
+			<embed src="UTReborn.swf?build=release" quality="high" bgcolor="#000000"
 				width="800" height="600" name="UTReborn" align="middle"
 				   play="true"
 				   loop="false"
@@ -365,7 +365,7 @@
 	</div>
 	<p>Thanks for playing UT Realms! Check out the <a href="http://valorproject.wikidot.com/" target="_blank">Valor Wiki</a>
 	<br/>	
-	<p>get the flashplayer link here: <a href="#"><span class="copy-link">https://www.utrealmsreborn.github.io/UTReborn.swf (Click to Copy)</span></a>
+	<p>get the flashplayer link here: <a href="#"><span class="copy-link">https://www.utrealmsreborn.github.io/UTReborn.swf?build=release (Click to Copy)</span></a>
 		<h4 style="margin-top: 0px; margin-bottom: 0px;"> <script type="text/javascript">
 			var d = new Date()
 			document.write(d.getFullYear())
