oof, something in webclient broke

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
 				id="UTReborn" width="640" height="640" class="game_swf"
 				codebase="https://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="UTReborn.swf?build=release" />
+			<param name="movie" value="UTReborn.swf" />
 			<param name="quality" value="high" />
 			<param name="bgcolor" value="#000000" />
 			<param name="wmode" value="direct" />
