--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 			<param name="bgcolor" value="#000000" />
 			<param name="wmode" value="direct" />
 			<param name="allowScriptAccess" value="sameDomain" />
-			<embed src="UTReborn.swf?build=release" quality="high" bgcolor="#000000"
+			<embed src="UTReborn.swf" ext="?build=release" quality="high" bgcolor="#000000"
 				width="800" height="600" name="UTReborn" align="middle"
 				   play="true"
 				   loop="false"
