--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 			// if we've detected an acceptable version
 			// embed the Flash Content SWF when all tests are passed
 			AC_FL_RunContent(
-					"src", "UTReborn",
+					"src", "UTReborn.swf?build=release",
 					"FlashVars", rotmg.UrlLib.getProtocolString()+'&version_timestamp=1561028013',
 					"width", "800",
 					"height", "600",
