make the window larger

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 		body { 
 			display: table-cell;
-    		vertical-align: middle;
-			width: 864px !important;
+    			vertical-align: middle;
+			width: 100%;
 			margin: 0px; 
 			padding: 0; 
 			background: #111 url(
@@ -204,8 +204,8 @@
 
 		.getFlash {
 		display: table-cell;
-		width: 800px;
-		height: 600px;
+		width: 1600px;
+		height: 1200px;
 		background: #000 url(
 				images/getFlashBackground.png
 			) repeat;
@@ -213,8 +213,8 @@
 		}
 		.getClient {
 		display: table-cell;
-		width: 800px;
-		height: 600px;
+		width: 1600px;
+		height: 1200px;
 		background: #000;
 		vertical-align: middle;
 		}
@@ -300,8 +300,8 @@
 			AC_FL_RunContent(
 					"src", "playerProductInstall",
 					"FlashVars", "MMredirectURL="+MMredirectURL+'&MMplayerType='+MMPlayerType+'&MMdoctitle='+MMdoctitle+""+'&version_timestamp=1561028013',
-					"width", "800",
-					"height", "600",
+					"width", "1600",
+					"height", "1200",
 					"align", "middle",
 					"id", "UTReborn",
 					"class", "game_swf",
@@ -318,8 +318,8 @@
 			AC_FL_RunContent(
 					"src", "UTReborn.swf?build=release",
 					"FlashVars", rotmg.UrlLib.getProtocolString()+'&version_timestamp=1561028013',
-					"width", "800",
-					"height", "600",
+					"width", "1600",
+					"height", "1200",
 					"align", "middle",
 					"id", "UTReborn",
 					"class", "game_swf",
